# google-ads-mcp-enhanced

./: MANIFEST.in  README.md  pyproject.toml
ads_mcp/: config.py  mcp_header_interceptor.py  tools_config.yaml  utils.py
ads_mcp/tools/: conversions.py  mutations.py  planning.py  recommendations.py  reports.py  search.py
docs/: cap-google-ads-mcp-context.md  google-ads-api-access-design-doc.md
tests/: config_test.py  tools_mounting_test.py  utils_test.py
tests/smoke/: golden_tools_list.json  llm_cases.json
tests/tools/: conversions_test.py  mutations_test.py  planning_test.py  reports_test.py  schema_test.py
